--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 **/.vs/
 Lab2_TimingAndDelays/Lab 2 - Schematic.pdf
 Lab3_Interrupts/Lab 3 - Schematic.pdf
+Lab4_AD-Conversion/Lab 4 - Schematic.pdf
