--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 Lab2_TimingAndDelays/Lab 2 - Schematic.pdf
 Lab3_Interrupts/Lab 3 - Schematic.pdf
 Lab4_AD-Conversion/Lab 4 - Schematic.pdf
+Lab7_StepperMotorControl/eagle.epf
+Lab7_StepperMotorControl/Lab 7 - Schematic.s#*
